--- a/index.html
+++ b/index.html
@@ -14,12 +14,16 @@
             <h2>Inputs</h3>
             <hr>
             <h3>Line 1</h3>
-            <input id="l1slope", type="number">Slope</input>
-            <input id="l1intercept"type="number">Y Intercept</input>
+            <p>Slope</p>
+            <input id="l1slope", type="number"></input>
+            <p>Intercept</p>
+            <input id="l1intercept"type="number"></input>
             <hr>
             <h3>Line 2</h3>
-            <input id="l2slope", type="number">Slope</input>
-            <input id="l2intercept"type="number">Y Intercept</input>
+            <p>Slope</p>
+            <input id="l2slope", type="number"></input>
+            <p>Intercept</p>
+            <input id="l2intercept"type="number"></input>
             <hr>
             <br><br>
             <button onclick="calculate()">Calculate!</button>
